--- a/src/pages/host-guest/host-guest.html
+++ b/src/pages/host-guest/host-guest.html
@@ -4,7 +4,7 @@
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
-<ion-content padding class="background">
+<ion-content padding class="background no-scroll">
     <button ion-button clear icon-only class="votebutton" [navPush]="HowtoButton"><ion-icon name="information-circle"></ion-icon></button>
   <ion-grid>
     <ion-col>
