Building for android and started updating icons and image paths

--- a/src/pages/guest-song-list/guest-song-list.html
+++ b/src/pages/guest-song-list/guest-song-list.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
     <ion-thumbnail float-left>
-      <img src="../../assets/imgs/logoicon.png" height="30px" padding-left="1px"/>
+      <img src="assets/imgs/logoicon.png" height="30px" padding-left="1px"/>
     </ion-thumbnail>
     <ion-title item-left class="titleicon" id="room">{{title}}</ion-title>
 
