--- a/src/pages/guest/guest.html
+++ b/src/pages/guest/guest.html
@@ -7,7 +7,7 @@
 <ion-header>
   <ion-navbar class="flex">
     <ion-thumbnail float-right>
-      <img src="../../assets/imgs/logoicon.png" height="30px" padding-right="1px"/>
+      <img src="assets/imgs/logoicon.png" height="30px" padding-right="1px"/>
     </ion-thumbnail>
     <ion-title item-left class="titleicon">Guest</ion-title>
   </ion-navbar>
