--- a/src/pages/host-guest/host-guest.html
+++ b/src/pages/host-guest/host-guest.html
@@ -11,7 +11,7 @@
       <ion-row class="blank1"></ion-row>
       <ion-row class="centering">
         <ion-row class="logo">
-          <div><img src="../../assets/imgs/logo.png" alt="logo"></div>
+          <div><img src="assets/imgs/logo.png" alt="logo"></div>
         </ion-row>
         <ion-row class="blank1"></ion-row>
         <ion-row class="blank1"></ion-row>
