--- a/src/pages/howto/howto.html
+++ b/src/pages/howto/howto.html
@@ -9,7 +9,7 @@
   <ion-navbar>
     <div>
       <ion-thumbnail float-right>
-        <img src="../../assets/imgs/logoicon.png" height="30px" padding-right="1px"/>
+        <img src="assets/imgs/logoicon.png" height="30px" padding-right="1px"/>
       </ion-thumbnail>
       <ion-title class="titleicon">About</ion-title>
     </div>
