--- a/src/pages/add-song/add-song.html
+++ b/src/pages/add-song/add-song.html
@@ -8,7 +8,7 @@
 
   <ion-navbar>
     <ion-thumbnail float-right>
-      <img src="../../assets/imgs/logoicon.png" height="30px" padding-right="1px"/>
+      <img src="assets/imgs/logoicon.png" height="30px" padding-right="1px"/>
     </ion-thumbnail>
     <ion-title item-left class="titleicon" id="roomCodeAddSong">Add Song</ion-title>
   </ion-navbar>
