Matched variable name for roomCode, id, roomId to roomCode

--- a/src/pages/guest/guest.html
+++ b/src/pages/guest/guest.html
@@ -26,7 +26,7 @@
       </ion-row>
       <ion-row id="blank2"></ion-row>
       <ion-row>
-        <button ion-button block (click)="isCorrectRoomInput(this.roomCode, this.idList)">Enter Room</button>
+        <button ion-button block (click)="isCorrectRoomInput(this.roomCode, this.roomCodeList)">Enter Room</button>
       </ion-row>
       <ion-row>
         <p id='output'></p>
