--- a/src/pages/host-song-list/host-song-list.html
+++ b/src/pages/host-song-list/host-song-list.html
@@ -6,7 +6,7 @@
     <ion-thumbnail float-left>
       <img src="assets/imgs/logoicon.png" height="30px" padding-left="1px"/>
     </ion-thumbnail>
-    <ion-title item-left class="titleicon" id="room">{{title}}</ion-title>
+    <ion-title item-left class="titleicon" id="room">{{roomTitle}}</ion-title>
 
     <ion-buttons end>
       <button ion-button icon-only (click)="exitConfirm()">
