--- a/src/pages/guest/guest.html
+++ b/src/pages/guest/guest.html
@@ -25,7 +25,7 @@
       </ion-row>
       <ion-row id="blank2"></ion-row>
       <ion-row>
-        <button ion-button block (click)="isCorrectRoomInput(this.roomCode, this.roomCodeList)">Enter Room</button>
+        <button ion-button block (click)="isCorrectRoomInput(this.roomCode)">Enter Room</button>
       </ion-row>
       <ion-row>
         <p id='output'></p>
