Fixed image filepaths in howto page

--- a/src/pages/howto/howto.html
+++ b/src/pages/howto/howto.html
@@ -100,7 +100,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/hostGuest.png">
+            <img margin-bottom="20px" class="howto" src="assets/imgs/howToScreenShots/hostGuest.png">
           </ion-row>
         </ion-col>
     </ion-grid>
@@ -122,17 +122,17 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img class="howto" src="../../assets/imgs/howToScreenShots/hostRoomCreation.png">
+            <img class="howto" src="assets/imgs/howToScreenShots/hostRoomCreation.png">
           </ion-row>
           <ion-row text-justify>
-            <p> 
+            <p>
               If you are a guest, after you click guest, you will see a place
               for you to enter the room code. Get the room code from your host
               and enter it in the box!
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/guestEnterRoom.png">
+            <img margin-bottom="20px" class="howto" src="assets/imgs/howToScreenShots/guestEnterRoom.png">
           </ion-row>
         </ion-col>
       </ion-grid>
@@ -159,7 +159,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img class="howto" src="../../assets/imgs/howToScreenShots/hostSongList.png">
+            <img class="howto" src="assets/imgs/howToScreenShots/hostSongList.png">
           </ion-row>
           <ion-row text-justify>
             <p>
@@ -184,7 +184,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/hostEndParty.png">
+            <img margin-bottom="20px" class="howto" src="assets/imgs/howToScreenShots/hostEndParty.png">
           </ion-row>
         </ion-col>
       </ion-grid>
@@ -206,7 +206,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img class="howto" src="../../assets/imgs/howToScreenShots/guestSongList.png">
+            <img class="howto" src="assets/imgs/howToScreenShots/guestSongList.png">
           </ion-row>
           <ion-row text-justify>
             <p>
@@ -223,7 +223,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/upVote.png">
+            <img margin-bottom="20px" class="howto" src="assets/imgs/howToScreenShots/upVote.png">
           </ion-row>
           <ion-row text-center justify-content-center>
             <p>
@@ -233,7 +233,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img class="howto" src="../../assets/imgs/howToScreenShots/downVote.png">
+            <img class="howto" src="assets/imgs/howToScreenShots/downVote.png">
           </ion-row>
           <ion-row text-justify>
             <p>
@@ -242,7 +242,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img margin-bottom="20px" class="howto" src="../../assets/imgs/howToScreenShots/guestExitRoom.png">
+            <img margin-bottom="20px" class="howto" src="assets/imgs/howToScreenShots/guestExitRoom.png">
           </ion-row>
         </ion-col>
       </ion-grid>
@@ -264,7 +264,7 @@
             </p>
           </ion-row>
           <ion-row justify-content-center>
-            <img class="howto" src="../../assets/imgs/howToScreenShots/addSong.png">
+            <img class="howto" src="assets/imgs/howToScreenShots/addSong.png">
           </ion-row>
           <ion-row text-justify>
             <p>
